Updating GASPISA talk

--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,12 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "The Structure and Environment of Virgo Cluster Galaxies with Deep Optical Morphologies"
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
-date: 2012-03-01
-location: "San Francisco, California"
+permalink: /talks/gaspisa-talk
+venue: "The physical processes shaping the stellar and gaseous histories of galaxies (GASPISA2024)"
+date: 2024-05-31
+location: "Auditorium dell'Opera della Primaziale Pisana G. Toniolo, Pisa, Italy"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+I gave a contributed talk on the morphoogical catalogue and analysis for all galaxies in the Virgo cluster at GASPISA 2024. A link to a recording of my presentation can be viewed here <a href="https://youtu.be/icGtkiZayEk?si=TkwHbO_VQ4l19ul6&t=4459 target="_blank">here!</a>
+
