Editing URL for talk

--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -8,5 +8,5 @@ date: 2024-05-31
 location: "Auditorium dell'Opera della Primaziale Pisana G. Toniolo, Pisa, Italy"
 ---
 
-I gave a contributed talk on the morphoogical catalogue and analysis for all galaxies in the Virgo cluster at GASPISA 2024. A link to a recording of my presentation can be viewed here <a href="https://youtu.be/icGtkiZayEk?si=TkwHbO_VQ4l19ul6&t=4459 target="_blank">here!</a>
+I gave a contributed talk on the morphoogical catalogue and analysis for all galaxies in the Virgo cluster at GASPISA 2024. A link to a recording of my presentation can be viewed [here!]([url](https://youtu.be/icGtkiZayEk?si=TkwHbO_VQ4l19ul6&t=4459))
 
