Adding AAS241 Talk

--- a/_talks/2013-03-01-tutorial-1.md
+++ b/_talks/2013-03-01-tutorial-1.md
@@ -1,13 +1,11 @@
 ---
-title: "Tutorial 1 on Relevant Topic in Your Field"
+title: "High Resolution Optical Galaxy Morphology with the Next Generation Virgo Cluster Survey"
 collection: talks
-type: "Tutorial"
-permalink: /talks/2013-03-01-tutorial-1
-venue: "UC-Berkeley Institute for Testing Science"
-date: 2013-03-01
-location: "Berkeley CA, USA"
+type: "Contributed Talk"
+permalink: /talks/aas241-talk
+venue: "The 241st Meeting of the American Astronomical Society"
+date: 2023-01-12
+location: "Seattle Convention Center, Seattle, Washington, USA"
 ---
 
-[More information here](http://exampleurl.com)
-
-This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+I presented a contributed talk at AAS 241 on  preliminary results from my morphological catalogue and analysis of all galaxies in the Virgo Cluster. During this 5-minute presentation, I highlighted notable forthcoming results from the NGVS and discussed how our comprehensive morphological census will provide unprecedented insights into the diverse galaxy populations in Virgo.
