Adding AAS240 Talk

--- a/_talks/2014-02-01-talk-2.md
+++ b/_talks/2014-02-01-talk-2.md
@@ -1,13 +1,11 @@
 ---
-title: "Talk 2 on Relevant Topic in Your Field"
+title: "The Impact of the Initial Mass Function on the Evolution of M/L"
 collection: talks
-type: "Talk"
-permalink: /talks/2014-02-01-talk-2
-venue: "London School of Testing"
-date: 2014-02-01
-location: "London, UK"
+type: "Contributed Talk"
+permalink: /talks/aas240-talk
+venue: "The 240th Meeting of the American Astronomical Society"
+date: 2022-06-13
+location: "Pasadena Convention Center, Pasadena, California, USA"
 ---
 
-[More information here](http://example2.com)
-
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+At AAS 240, I presented a contributed talk on the findings from my Master's research, which investigated the effects of varying the stellar initial mass function (IMF) on the derived properties of galaxy stellar populations, particularly their mass-to-light ratios. This work offers critical insights into the uncertainties in stellar population synthesis and its application to understanding galaxy properties across cosmic time, including the plausibility of evolving IMFs, such as bottom-heavy IMFs, in early-type galaxies.
